--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,4 @@
-welcome
+<h2>Welcome to Coder Restaurant</h2>
+<p>
+  Lorem ipsum dolor sit amet, consectetur adipiscing elit. In nec nibh molestie, egestas metus vitae, faucibus libero. Vestibulum in mattis magna. Quisque sodales elit magna, eget lobortis massa tempor sed. Mauris eros tellus, accumsan et convallis eget, ultricies quis eros. In suscipit mi malesuada ex tristique, et condimentum lectus tempus. Aenean tempor, mauris sed eleifend hendrerit, sapien enim dignissim nibh, quis pharetra mauris ligula quis est. Morbi pharetra auctor ipsum a bibendum. Aenean euismod lacus in ex gravida, ac accumsan magna lobortis. Mauris suscipit sed quam vitae facilisis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec nisi massa, sagittis vitae lacinia sit amet, scelerisque vitae turpis. Morbi maximus est a tempor egestas.
+</p>
