--- a/app/views/food_orders/_form.html.erb
+++ b/app/views/food_orders/_form.html.erb
@@ -1,23 +1,8 @@
-<%= form_tag(create_order_path, method: "get") do %>
-    <fieldset class="form-group">
-      <label for="name">Name: </label>
-      <input type="text" name="name" id="name" class="form-control" placeholder="name" />
-
-    </fieldset>
-    <fieldset class="form-group">
-      <label for="phone">Phone: </label>
-      <input type="text" name="phone" id="phone" class="form-control" placeholder="phone" />
-    </fieldset>
-    <fieldset class="form-group">
-      <label for="email">Email: </label>
-      <input type="text" name="email" id="email" class="form-control" placeholder="email" />
-    </fieldset>
-    <fieldset class="form-group">
-      <label for="address">Address: </label>
-      <input type="text" name="address" id="address" class="form-control" placeholder="address" />
-    </fieldset>
-
-    <div class="actions">
-      <button type="submit" class="btn btn-success">Order</button>
-    </div>
+<%= simple_form_for @order, url: create_order_path, html: { class: 'form-horizontal' } do |f| %>
+    <%= f.input :coupon %>
+    <%= f.input :name %>
+    <%= f.input :phone %>
+    <%= f.input :email %>
+    <%= f.input :address %>
+    <%= f.submit 'Order' %>
 <% end %>
