--- a/app/views/food_orders/show.html.erb
+++ b/app/views/food_orders/show.html.erb
@@ -1,5 +1,5 @@
 <h3>Your current order</h3>
-<% if @foods.length == 0 || session[:foods_order].length == 0 %>
+<% if @foods.length == 0 || (session[:foods_order] && session[:foods_order].length == 0) %>
       Currently, you do not have any food in the basket. Please order <%= link_to "here", sections_path  %>
     <% else %>
     <table class="table table-striped">
