fix tether problem

--- a/app/views/sections/index.html.erb
+++ b/app/views/sections/index.html.erb
@@ -53,7 +53,7 @@
                   <span class="more" id="more-<%= food.id %>">
                     <span class="moreellipses">&nbsp;</span>
                     <span class="morecontent">
-                      <span><%= food.description %></span>&nbsp;&nbsp;<a id="morelink-<%= food.id %>" class="morelink" data-remote="true" href="/view_food_more_info.js?food_id=<%= food.id %>">Details &gt;</a>
+                      <span><%= food.description %></span>&nbsp;&nbsp;<a id="morelink-<%= food.id %>" class="morelink" data-remote="true" href="/view_food_more_info?food_id=<%= food.id %>">Details &gt;</a>
                     </span>
                   </span>
                 </p>
