edit email with total amount of order

--- a/app/views/coder_restaurant_mailer/order_info_email.html.erb
+++ b/app/views/coder_restaurant_mailer/order_info_email.html.erb
@@ -19,6 +19,7 @@
 <p>Phone: <%= @order.phone %></p>
 <p>Email: <%= @order.email %></p>
 <p>Address: <%= @order.address %></p>
+<p>Total: <%= number_to_currency(@order.total_order, precision: 0, separator: '.', delimiter: '.', unit: '', format: "%n VND") %> (including 20000 VND for shipping)</p>
 <table class="table table-striped">
   <thead>
   <tr>
