--- a/app/views/welcome/contact_us.html.erb
+++ b/app/views/welcome/contact_us.html.erb
@@ -1,4 +1,4 @@
 <h1>Contact Us</h1>
-<h3>The KAfe</h3>
+<h3>Coder Restaurant</h3>
 <p>62 Lý Tự Trọng, Bến Nghé, Hồ Chí Minh, Vietnam</p>
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3919.446798395726!2d106.69802091462897!3d10.777051262129497!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31752f47f4866399%3A0xbe26f013de7e4bcf!2sThe+KAfe!5e0!3m2!1sen!2s!4v1457852740906" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
