edit email with total amount of order

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,7 @@
 <body>
 <div class="header">
   <div class="restaurant-name">
-    <%= image_tag(asset_path("logo.png"), width: "100") %>
+    <a href="/"><%= image_tag(asset_path("logo.png"), width: "100") %></a>
     <h1>Coder Can Cook</h1>
   </div>
 
