--- a/app/views/foods/_form.html.erb
+++ b/app/views/foods/_form.html.erb
@@ -18,7 +18,7 @@
     </fieldset>
     <fieldset class="form-group">
       <label for="section_id">Section: </label>
-      <%= f.select :section_id, [["Breakfast","1"], ["Lunch", "2"], ["Dinner", "3"]],
+      <%= f.select :section_id, [["Breakfast","1"], ["Lunch", "2"], ["Dinner", "3"], ["Drinks", "4"]],
                    id: "section_id", prompt: "Select...", class: "form-control section-select" %>
     </fieldset>
     <div class="actions">
